added shop page

--- a/app/login.html
+++ b/app/login.html
@@ -36,7 +36,7 @@
       </nav>
       <div class="user-nav">
         <a class="user-nav__link" href="#">
-          <img class="user-nuv__link-img" src="images/icons/user-grey.svg" alt="user icon">
+          <img class="user-nuv__link-img" src="images/icons/user.svg" alt="user icon">
         </a>
         <a class="user-nav__link" href="#">
           <img class="user-nuv__link-img" src="images/icons/search.svg" alt="user icon">
