--- a/app/index.html
+++ b/app/index.html
@@ -279,16 +279,29 @@
               </a>
             </div>
           </div>
-          <div class="star" data-rateyo-rating="4"></div>
-          <h4 class="product-item__title">
-            White Polo Men’s T-Shirt
-          </h4>
-          <div class="product-item__price">
-            <div class="product-item__new-price">$34.00</div>
-            <div class="product-item__old-price">$27.00</div>
+
+          <div class="product-item__wrapper-box">
+            <div class="product-item__box">
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">
+                White Polo Men’s T-Shirt
+              </h4>
+              <div class="product-item__price">
+                <div class="product-item__new-price">$34.00</div>
+                <div class="product-item__old-price">$27.00</div>
+              </div>
+            </div>
+            <div class="product-item__content-box">
+              <p class="product-item__text">
+                Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+              </p>
+              <button class="product-item__btn">Add to cart</button>
+            </div>
           </div>
+
         </div>
         <div class="product-item product-item--sale">
+
           <div class="product-item__img-box">
             <img class="product-item__images" src="images/product/2.jpg" alt="product images">
             <div class="product-item__link-box">
@@ -312,16 +325,29 @@
               </a>
             </div>
           </div>
-          <div class="star" data-rateyo-rating="4"></div>
-          <h4 class="product-item__title">
-            White Polo Men’s T-Shirt
-          </h4>
-          <div class="product-item__price">
-            <div class="product-item__new-price">$34.00</div>
-            <div class="product-item__old-price">$27.00</div>
+
+          <div class="product-item__wrapper-box">
+            <div class="product-item__box">
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">
+                White Polo Men’s T-Shirt
+              </h4>
+              <div class="product-item__price">
+                <div class="product-item__new-price">$34.00</div>
+                <div class="product-item__old-price">$27.00</div>
+              </div>
+            </div>
+            <div class="product-item__content-box">
+              <p class="product-item__text">
+                Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+              </p>
+              <button class="product-item__btn">Add to cart</button>
+            </div>
           </div>
+
         </div>
         <div class="product-item">
+
           <div class="product-item__img-box">
             <img class="product-item__images" src="images/product/3.jpg" alt="product images">
             <div class="product-item__link-box">
@@ -345,16 +371,29 @@
               </a>
             </div>
           </div>
-          <div class="star" data-rateyo-rating="4"></div>
-          <h4 class="product-item__title">
-            White Polo Men’s T-Shirt
-          </h4>
-          <div class="product-item__price">
-            <div class="product-item__new-price">$34.00</div>
-            <div class="product-item__old-price">$27.00</div>
+
+          <div class="product-item__wrapper-box">
+            <div class="product-item__box">
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">
+                White Polo Men’s T-Shirt
+              </h4>
+              <div class="product-item__price">
+                <div class="product-item__new-price">$34.00</div>
+                <div class="product-item__old-price">$27.00</div>
+              </div>
+            </div>
+            <div class="product-item__content-box">
+              <p class="product-item__text">
+                Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+              </p>
+              <button class="product-item__btn">Add to cart</button>
+            </div>
           </div>
+
         </div>
         <div class="product-item product-item--sale">
+
           <div class="product-item__img-box">
             <img class="product-item__images" src="images/product/4.jpg" alt="product images">
             <div class="product-item__link-box">
@@ -378,16 +417,29 @@
               </a>
             </div>
           </div>
-          <div class="star" data-rateyo-rating="4"></div>
-          <h4 class="product-item__title">
-            White Polo Men’s T-Shirt
-          </h4>
-          <div class="product-item__price">
-            <div class="product-item__new-price">$34.00</div>
-            <div class="product-item__old-price">$27.00</div>
+
+          <div class="product-item__wrapper-box">
+            <div class="product-item__box">
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">
+                White Polo Men’s T-Shirt
+              </h4>
+              <div class="product-item__price">
+                <div class="product-item__new-price">$34.00</div>
+                <div class="product-item__old-price">$27.00</div>
+              </div>
+            </div>
+            <div class="product-item__content-box">
+              <p class="product-item__text">
+                Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+              </p>
+              <button class="product-item__btn">Add to cart</button>
+            </div>
           </div>
+
         </div>
         <div class="product-item">
+
           <div class="product-item__img-box">
             <img class="product-item__images" src="images/product/5.jpg" alt="product images">
             <div class="product-item__link-box">
@@ -411,16 +463,29 @@
               </a>
             </div>
           </div>
-          <div class="star" data-rateyo-rating="4"></div>
-          <h4 class="product-item__title">
-            White Polo Men’s T-Shirt
-          </h4>
-          <div class="product-item__price">
-            <div class="product-item__new-price">$34.00</div>
-            <div class="product-item__old-price">$27.00</div>
+
+          <div class="product-item__wrapper-box">
+            <div class="product-item__box">
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">
+                White Polo Men’s T-Shirt
+              </h4>
+              <div class="product-item__price">
+                <div class="product-item__new-price">$34.00</div>
+                <div class="product-item__old-price">$27.00</div>
+              </div>
+            </div>
+            <div class="product-item__content-box">
+              <p class="product-item__text">
+                Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+              </p>
+              <button class="product-item__btn">Add to cart</button>
+            </div>
           </div>
+
         </div>
         <div class="product-item product-item--sale">
+
           <div class="product-item__img-box">
             <img class="product-item__images" src="images/product/6.jpg" alt="product images">
             <div class="product-item__link-box">
@@ -444,14 +509,26 @@
               </a>
             </div>
           </div>
-          <div class="star" data-rateyo-rating="4"></div>
-          <h4 class="product-item__title">
-            White Polo Men’s T-Shirt
-          </h4>
-          <div class="product-item__price">
-            <div class="product-item__new-price">$34.00</div>
-            <div class="product-item__old-price">$27.00</div>
+
+          <div class="product-item__wrapper-box">
+            <div class="product-item__box">
+              <div class="star" data-rateyo-rating="4"></div>
+              <h4 class="product-item__title">
+                White Polo Men’s T-Shirt
+              </h4>
+              <div class="product-item__price">
+                <div class="product-item__new-price">$34.00</div>
+                <div class="product-item__old-price">$27.00</div>
+              </div>
+            </div>
+            <div class="product-item__content-box">
+              <p class="product-item__text">
+                Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+              </p>
+              <button class="product-item__btn">Add to cart</button>
+            </div>
           </div>
+
         </div>
 
       </div>
