--- a/app/index.html
+++ b/app/index.html
@@ -606,11 +606,11 @@
             <img src="images/blog/1.jpg" alt="blog image">
           </a>
           <div class="blog__item-box">
-            <div class="blog__item-info">
-              <a class="blog__item-author" href="#">
+            <div class="blog-box">
+              <a class="blog-box__author" href="#">
                 By Admin
               </a>
-              <div class="blog__item-date">
+              <div class="blog-box__date">
                 10 January, 2020
               </div>
             </div>
@@ -629,11 +629,11 @@
             <img src="images/blog/2.jpg" alt="blog image">
           </a>
           <div class="blog__item-box">
-            <div class="blog__item-info">
-              <a class="blog__item-author" href="#">
+            <div class="blog-box">
+              <a class="blog-box__author" href="#">
                 By Admin
               </a>
-              <div class="blog__item-date">
+              <div class="blog-box__date">
                 10 January, 2020
               </div>
             </div>
@@ -652,11 +652,11 @@
             <img src="images/blog/3.jpg" alt="blog image">
           </a>
           <div class="blog__item-box">
-            <div class="blog__item-info">
-              <a class="blog__item-author" href="#">
+            <div class="blog-box">
+              <a class="blog-box__author" href="#">
                 By Admin
               </a>
-              <div class="blog__item-date">
+              <div class="blog-box__date">
                 10 January, 2020
               </div>
             </div>
