--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,9 @@
         <img class="logo__img" src="images/logo.png" alt="logo">
       </a>
       <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item">
             <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
@@ -54,7 +57,6 @@
     </div>
   </div>
 </header>
-
 
 <main class="main">
 
@@ -120,7 +122,6 @@
     </div>
   </div>
 </section>
-
 <section class="categories-info">
   <div class="categories-info__inner">
     <div class="container">
@@ -222,7 +223,6 @@
     </div>
   </div>
 </section>
-
 <section class="video-fashion">
   <div class="container">
     <div class="video-fashion__inner">
@@ -252,7 +252,6 @@
     </div>
   </div>
 </section>
-
 <section class="product">
   <div class="container">
     <h3 class="title">
@@ -546,7 +545,6 @@
     </a>
   </div>
 </section>
-
 <div class="promo">
   <div class="container">
     <div class="promo__inner">
@@ -578,7 +576,6 @@
     </div>
   </div>
 </div>
-
 <div class="partners">
   <div class="container">
     <ul class="partners__list">
@@ -603,7 +600,6 @@
     </ul>
   </div>
 </div>
-
 <section class="blog">
   <div class="container">
     <h3 class="title">
@@ -686,16 +682,13 @@
     </div>
   </div>
 </section>
-
-  
 </main>
 
-  <footer class="footer">
+<footer class="footer">
   <div class="container">
     <di v class="footer-top">
       <div class="footer-top__item footer-top__contact">
-        <a class="logo footer-t
-        op__logo" href="#">
+        <a class="logo footer-top__logo" href="#">
           <img class="logo__img" src="images/logo.png" alt="logo">
         </a>
         <a class="footer-top__address" href="#">
