--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/blog-one.min.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
   
@@ -17,6 +18,9 @@
         <img class="logo__img" src="images/logo.png" alt="logo">
       </a>
       <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item">
             <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
@@ -58,23 +62,24 @@
 
 <main class="main">
   
-  <section class="top">
-    <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
-      <div class="container">
-        <h2 class="top__title">BLOG DETAILS</h2>
-        <div class="breadcrumbs">        
-          <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Home</a>
-            </li>
-            <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">Blog one</a>
-            </li>
-          </ul>
-        </div>
+<section class="top">
+  <div class="top__container" style="background-image: url('../images/top-bg.jpg');">
+    <div class="container">
+      <h2 class="top__title">LOG IN</h2>
+      <div class="breadcrumbs">
+        <ul class="breadcrumbs__list">
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="#">Home</a>
+          </li>
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="#">Log in</a>
+          </li>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+  
 
   <section class="blog-page blog-one">
     <div class="container">
@@ -454,8 +459,7 @@
   <div class="container">
     <di v class="footer-top">
       <div class="footer-top__item footer-top__contact">
-        <a class="logo footer-t
-        op__logo" href="#">
+        <a class="logo footer-top__logo" href="#">
           <img class="logo__img" src="images/logo.png" alt="logo">
         </a>
         <a class="footer-top__address" href="#">
