--- a/app/module/_footer/_footer.html
+++ b/app/module/_footer/_footer.html
@@ -2,8 +2,7 @@
   <div class="container">
     <di v class="footer-top">
       <div class="footer-top__item footer-top__contact">
-        <a class="logo footer-t
-        op__logo" href="#">
+        <a class="logo footer-top__logo" href="#">
           <img class="logo__img" src="images/logo.png" alt="logo">
         </a>
         <a class="footer-top__address" href="#">
